0x0E-web_stack_debugging_1/1
  File "./0-nginx_likes_port_80", line 3
    sudo apt-get update && sudo apt-get install nginx -y
         ^
SyntaxError: invalid syntax
